--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,13 @@
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
+$menuText:#fff;
+$menuActiveText:#651e58;
 $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuBg:#651e58;
+$menuHover:#943c84;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$subMenuBg:#722764;
+$subMenuHover:#943c84;
 
 $sideBarWidth: 210px;
 
