--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -67,12 +67,22 @@
       height: 100%;
       width: 100% !important;
     }
-
     // menu hover
     .submenu-title-noDropdown,
+    .el-menu-item,
     .el-submenu__title {
       &:hover {
         background-color: $menuHover !important;
+        // color: $menuBg !important;
+      }
+    }
+
+    // menu active
+    .submenu-title-noDropdown,
+    .el-menu-item {
+      &.is-active {
+        background-color: #fdecf9 !important;
+        color: $menuBg !important;
       }
     }
 
@@ -83,10 +93,10 @@
     & .nest-menu .el-submenu>.el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
-      background-color: $subMenuBg !important;
+      background-color: $subMenuBg; //!important;
 
       &:hover {
-        background-color: $subMenuHover !important;
+        // background-color: #fdecf9 !important;
       }
     }
   }
@@ -204,6 +214,14 @@
       background-color: $menuHover !important;
     }
   }
+  // menu active
+  .nest-menu .el-submenu>.el-submenu__title,
+  .el-menu-item {
+    &.is-active {
+      background-color: #fdecf9 !important;
+      color: $menuBg !important;
+    }
+  }
 
   // the scroll bar appears when the subMenu is too long
   >.el-menu--popup {
@@ -223,4 +241,7 @@
       border-radius: 20px;
     }
   }
+}
+.el-submenu__title i{
+  color: #fff;
 }
